# TrainOps_Observatory

./: .gitignore  QUICKSTART.md  README.md  Welcome_To_Colab.ipynb  docker-compose.yml  test_setup.sh
backend/: Dockerfile  run.py
backend/app/: __init__.py  analyzer.py  cost_estimator.py  models.py  routes.py
blob/main/examples/: colab_comparison.ipynb  colab_demo.ipynb
docs/: user-guide.md
examples/: colab_comparison.ipynb  colab_demo.ipynb  mnist_simple.py  resnet_cifar10.py  run_comparison.sh
frontend/: Dockerfile  package.json
frontend/src/app/: SuspenseWrapper.tsx  layout.tsx  page.tsx
frontend/src/components/: QueryProvider.tsx  RunsTable.tsx
sdk/: pyproject.toml
sdk/trainops/: __init__.py  cli.py  config.py  monitor.py
