[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trainops"
version = "0.1.0"
description = "Lightweight observability for ML training workflows"
authors = [
    {name = "Neha Dangwal", email = "dangwalneha2013@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["machine-learning", "training", "observability", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.28.0",
    "psutil>=5.9.0",
    "pynvml>=11.5.0",
    "tabulate>=0.9.0",
]

[project.scripts]
trainops = "trainops.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/nehadangwal/trainops-observatory"
Documentation = "https://github.com/nehadangwal/trainops-observatory/docs"
Repository = "https://github.com/nehadangwal/trainops-observatory"

[tool.setuptools.packages.find]
where = ["."]
include = ["trainops*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false